--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,10 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+$indigo: #6610f2;
+$purple: #6f42c1;
+$pink: #e83e8c;
+$teal: #20c997;
+$cyan: #17a2b8;
+$white: #fff;
+$gray-dark: #343a40;
