--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,38 +1,58 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <div class="container-fluid">
-    <%= link_to "#", class: "navbar-brand" do %>
-      <%= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
-    <% end %>
-
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto">
-        <% if user_signed_in? %>
-          <li class="nav-item active">
-            <%= link_to "Home", "#", class: "nav-link" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Messages", "#", class: "nav-link" %>
-          </li>
-          <li class="nav-item dropdown">
-          <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar", alt: "dropdown menu" %>
-          </a>
-            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Action", "#", class: "dropdown-item" %>
-              <%= link_to "Another action", "#", class: "dropdown-item" %>
-              <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
+<!-- Topbar Start -->
+<div class="container-fluid bg-dark">
+    <div class="row py-2 px-lg-5">
+        <div class="col-lg-6 text-center text-lg-left mb-2 mb-lg-0">
+            <div class="d-inline-flex align-items-center text-white">
+                <small><i class="fa fa-phone-alt mr-2"></i>+51 986 716 032</small>
+                <small class="px-3">|</small>
+                <small><i class="fa fa-envelope mr-2"></i>contact@grovana.cloud</small>
             </div>
-          </li>
-        <% else %>
-          <li class="nav-item">
-            <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-          </li>
-        <% end %>
-      </ul>
+        </div>
+        <div class="col-lg-6 text-center text-lg-right">
+            <div class="d-inline-flex align-items-center">
+                <a class="text-white px-2" href="">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+                <a class="text-white px-2" href="">
+                    <i class="fab fa-linkedin-in"></i>
+                </a>
+                <a class="text-white px-2" href="">
+                    <i class="fab fa-instagram"></i>
+                </a>
+            </div>
+        </div>
     </div>
-  </div>
+</div>
+<!-- Topbar End -->
+
+
+<!-- Navbar Start -->
+<div class="container-fluid p-0">
+    <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-lg-5 justify-content-between">
+      <div>
+          <h1 class="m-0 display-5 text-uppercase text-primary"><i class="fa-solid fa-cart-flatbed"></i> Grovana</h1>
+      </div>
+      <% if user_signed_in? || employee_signed_in? %>
+        <div class="d-flex">
+          <div class="collapse navbar-collapse px-lg-3">
+            <%= link_to "Home", "#", class: "btn btn-primary py-2 px-4 d-none d-lg-block rounded" %>
+          </div>
+          <div class="collapse navbar-collapse px-lg-3">
+            <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "btn btn-primary py-2 px-4 d-none d-lg-block rounded" %>
+          </div>
+        </div>
+      <% else %>
+        <div class="d-flex">
+          <div class="collapse navbar-collapse px-lg-3">
+            <%= link_to "Log In as Owner", new_user_session_path, class: "btn btn-primary py-2 px-4 d-none d-lg-block rounded" %>
+          </div>
+          <div class="collapse navbar-collapse px-lg-3">
+              <%= link_to "Log In as Employee", new_employee_session_path, class: "btn btn-primary py-2 px-4 d-none d-lg-block rounded" %>
+          </div>
+          <div class="collapse navbar-collapse px-lg-3">
+              <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-primary py-2 px-4 d-none d-lg-block rounded" %>
+          </div>
+        </div>
+      <% end %>
+    </nav>
 </div>
