--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -35,7 +35,10 @@
       <% if user_signed_in? || employee_signed_in? %>
         <div class="d-flex">
           <div class="collapse navbar-collapse px-lg-3">
-            <%= link_to "Home", "#", class: "btn btn-primary py-2 px-4 d-none d-lg-block rounded" %>
+            <%= link_to "Home", root_path, class: "btn btn-primary py-2 px-4 d-none d-lg-block rounded" %>
+          </div>
+          <div class="collapse navbar-collapse px-lg-3">
+            <%= link_to "Dashboard", dashboard_path, class: "btn btn-primary py-2 px-4 d-none d-lg-block rounded" %>
           </div>
           <div class="collapse navbar-collapse px-lg-3">
             <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "btn btn-primary py-2 px-4 d-none d-lg-block rounded" %>
