--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,4 +1,3 @@
-<%= turbo_frame_tag :contact_details do %>
 <div class="sidebar">
   <ul class="nav flex-column">
     <li class="nav-item">
@@ -27,7 +26,7 @@
       <% end %>
     </li>
     <li class="nav-item">
-      <%= link_to products_path, class: "nav-link" do %>
+      <%= link_to customers_path, class: "nav-link" do %>
         <i class="fa-solid fa-person"></i> Customers
       <% end %>
     </li>
@@ -49,4 +48,3 @@
 
   </ul>
 </div>
-<% end %>
