--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,4 +1,6 @@
-<div class="container mt-4">
+<%= render "shared/sidebar" %>
+<%= turbo_frame_tag :menu do %>
+<div class="content">
   <div class="d-flex justify-content-between align-items-center mb-4">
     <h1>Clientes</h1>
     <%= link_to "Nuevo Cliente", new_customer_path, class: "btn btn-primary" %>
@@ -31,4 +33,5 @@
       <% end %>
     </tbody>
   </table>
-</div> 
+</div>
+<% end %>
