--- a/app/views/sales/index.html.erb
+++ b/app/views/sales/index.html.erb
@@ -1,4 +1,7 @@
-<div class="container mt-4">
+<%= render "shared/sidebar" %>
+
+<%= turbo_frame_tag :menu do %>
+<div class="content">
   <div class="d-flex justify-content-between align-items-center mb-4">
     <h1>Ventas</h1>
     <%= link_to "Nueva Venta", new_sale_path, class: "btn btn-primary" %>
@@ -24,7 +27,7 @@
             <%= link_to "Editar", edit_sale_path(sale), class: "btn btn-sm btn-warning" %>
             <%= link_to "Eliminar",
                 sale_path(sale),
-                data: { 
+                data: {
                   turbo_method: :delete,
                   turbo_confirm: "¿Estás seguro que deseas eliminar esta venta?"
                 },
@@ -34,4 +37,5 @@
       <% end %>
     </tbody>
   </table>
-</div> 
+</div>
+<% end %>
