--- a/app/views/suppliers/index.html.erb
+++ b/app/views/suppliers/index.html.erb
@@ -1,4 +1,7 @@
-<div class="container mx-auto px-4 sm:px-6 lg:px-8 py-8">
+<%= render "shared/sidebar" %>
+
+<%= turbo_frame_tag :menu do %>
+<div class="content">
   <div class="sm:flex sm:items-center">
     <div class="sm:flex-auto">
       <h1 class="text-2xl font-semibold text-gray-900">Proveedores</h1>
@@ -59,3 +62,4 @@
     </div>
   </div>
 </div>
+<% end %>
