--- a/app/views/sales/show.html.erb
+++ b/app/views/sales/show.html.erb
@@ -1,42 +1,44 @@
-<div class="container mt-4">
-  <div class="card">
-    <div class="card-header">
-      <h2>Detalles de la Venta</h2>
-    </div>
-    <div class="card-body">
-      <div class="row">
-        <div class="col-md-6">
-          <p><strong>Fecha:</strong> <%= @sale.sale_date %></p>
-          <p><strong>Cliente:</strong> <%= "#{@sale.customer.first_name} #{@sale.customer.last_name}" %></p>
-          <p><strong>Total:</strong> <%= number_to_currency(@sale.total_price) %></p>
-        </div>
+<%= turbo_frame_tag :sale do %>
+  <div class="content">
+    <div class="card">
+      <div class="card-header">
+        <h2>Detalles de la Venta</h2>
       </div>
+      <div class="card-body">
+        <div class="row">
+          <div class="col-md-6">
+            <p><strong>Fecha:</strong> <%= @sale.sale_date %></p>
+            <p><strong>Cliente:</strong> <%= "#{@sale.customer.first_name} #{@sale.customer.last_name}" %></p>
+            <p><strong>Total:</strong> <%= number_to_currency(@sale.total_price) %></p>
+          </div>
+        </div>
 
-      <h3 class="mt-4">Productos Vendidos</h3>
-      <table class="table">
-        <thead>
-          <tr>
-            <th>Producto</th>
-            <th>Cantidad</th>
-            <th>Precio Unitario</th>
-            <th>Subtotal</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @sale.sale_details.each do |detail| %>
+        <h3 class="mt-4">Productos Vendidos</h3>
+        <table class="table">
+          <thead>
             <tr>
-              <td><%= detail.product.name %></td>
-              <td><%= detail.quantity %></td>
-              <td><%= number_to_currency(detail.unit_price) %></td>
-              <td><%= number_to_currency(detail.quantity * detail.unit_price) %></td>
+              <th>Producto</th>
+              <th>Cantidad</th>
+              <th>Precio Unitario</th>
+              <th>Subtotal</th>
             </tr>
-          <% end %>
-        </tbody>
-      </table>
-    </div>
-    <div class="card-footer">
-      <%= link_to "Editar", edit_sale_path(@sale), class: "btn btn-warning" %>
-      <%= link_to "Volver", sales_path, class: "btn btn-secondary" %>
+          </thead>
+          <tbody>
+            <% @sale.sale_details.each do |detail| %>
+              <tr>
+                <td><%= detail.product.name %></td>
+                <td><%= detail.quantity %></td>
+                <td><%= number_to_currency(detail.unit_price) %></td>
+                <td><%= number_to_currency(detail.quantity * detail.unit_price) %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+      <div class="card-footer">
+        <%= link_to "Editar", edit_sale_path(@sale), class: "btn btn-warning" %>
+        <%= link_to "Volver", sales_path, class: "btn btn-secondary" %>
+      </div>
     </div>
   </div>
-</div> 
+<% end %>
