--- a/app/views/employees/edit.html.erb
+++ b/app/views/employees/edit.html.erb
@@ -1,10 +1,12 @@
-<div class="container mx-auto px-4 py-8">
-  <div class="max-w-3xl mx-auto">
-    <div class="bg-white shadow sm:rounded-lg">
-      <div class="px-4 py-5 sm:p-6">
-        <h1 class="text-2xl font-bold mb-6">Editar Empleado</h1>
-        <%= render 'shared/employees/form' %>
+<%= turbo_frame_tag :employee do %>
+  <div class="content">
+    <div class="max-w-3xl mx-auto">
+      <div class="bg-white shadow sm:rounded-lg">
+        <div class="px-4 py-5 sm:p-6">
+          <h1 class="text-2xl font-bold mb-6">Editar Empleado</h1>
+          <%= render 'shared/employees/form' %>
+        </div>
       </div>
     </div>
   </div>
-</div>
+<% end %>
