--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -1,5 +1,5 @@
 <%= render "shared/sidebar" %>
-<%= turbo_frame_tag :menu do %>
+<%= turbo_frame_tag :purchase do %>
   <div class="content">
     <div class="d-flex justify-content-between align-items-center mb-4">
       <h1>Compras</h1>
