--- a/app/views/sales/index.html.erb
+++ b/app/views/sales/index.html.erb
@@ -1,6 +1,6 @@
 <%= render "shared/sidebar" %>
 
-<%= turbo_frame_tag :menu do %>
+<%= turbo_frame_tag :sale do %>
 <div class="content">
   <div class="d-flex justify-content-between align-items-center mb-4">
     <h1>Ventas</h1>
