--- a/app/views/sales/new.html.erb
+++ b/app/views/sales/new.html.erb
@@ -1,10 +1,12 @@
-<div class="container mt-4">
-  <div class="card">
-    <div class="card-header">
-      <h2>Nueva Venta</h2>
-    </div>
-    <div class="card-body">
-      <%= render 'form', sale: @sale %>
+<%= turbo_frame_tag :sale do %>
+  <div class="content">
+    <div class="card">
+      <div class="card-header">
+        <h2>Nueva Venta</h2>
+      </div>
+      <div class="card-body">
+        <%= render 'form', sale: @sale %>
+      </div>
     </div>
   </div>
-</div> 
+<% end %>
